!fixup grid-collapse

--- a/core/utilities/mixins/_centered-container.scss
+++ b/core/utilities/mixins/_centered-container.scss
@@ -9,7 +9,8 @@
   $columns: null,
   $grid: $neat-grid,
   $v-space: 1em,
-  $max-width: false
+  $max-width: false,
+  $grid-collapse: false
 )
 {
   $columns: _neat-column-default($grid, $columns); // Retrieves max columns from specified grid if empty, or the specified number of columns otherwise
